--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,20 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="../dist/js/bundle.js" charset="utf-8"></script>
+    <script src="http://cdn.bootcss.com/vue/2.1.3/vue.min.js" charset="utf-8"></script>
+    <script src="../build/lazyload.min.js" charset="utf-8"></script>
+    <script src="./app.js" charset="utf-8"></script>
+    <script type="text/javascript">
+    // 引入lazyload插件
+    Vue.use( lazyload, {
+      defaultPic: './img/default.png'
+    });
+
+    // 生成vue实例
+    new Vue({
+      el: '#app',
+      render: h => h( app )
+    });
+    </script>
   </body>
 </html>
