--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="//cdn.bootcss.com/vue/2.1.3/vue.min.js" charset="utf-8"></script>
+    <script src="https://cdn.bootcss.com/vue/2.1.3/vue.min.js" charset="utf-8"></script>
     <script src="../build/lazyload.min.js" charset="utf-8"></script>
     <script src="./app.js" charset="utf-8"></script>
     <script type="text/javascript">
