--- a/demo/index.html
+++ b/demo/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>vue lazyload</title>
+    <title>vue lazyload demo</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div id="app"></div>
     <script src="https://cdn.bootcss.com/vue/2.1.3/vue.min.js" charset="utf-8"></script>
-    <script src="../build/lazyload.min.js" charset="utf-8"></script>
+    <script src="../build/lazyload.js" charset="utf-8"></script>
     <script src="./app.js" charset="utf-8"></script>
     <script type="text/javascript">
     // 引入lazyload插件
